--- a/src/Main/main.fxml
+++ b/src/Main/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -27,6 +28,8 @@
                   <Image url="@/bus2.png" />
                </image>
             </ImageView>
+            <Button layoutX="111.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#OnRestart" prefHeight="25.0" prefWidth="82.0" text="Restart" />
+            <Button layoutX="111.0" layoutY="174.0" mnemonicParsing="false" onMouseClicked="#OnStepByStep" text="Step by step" />
          </children>
       </Pane>
    </children>
