--- a/src/Main/main.fxml
+++ b/src/Main/main.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.MainController">
    <columnConstraints>
@@ -20,16 +22,34 @@
          <children>
             <ImageView fx:id="imageViewMap" fitHeight="800.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../map.jpg" />
+                  <Image url="@../map.png" />
                </image>
             </ImageView>
             <ImageView fx:id="imageViewBusz" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" visible="false">
                <image>
-                  <Image url="@/bus2.png" />
+                  <Image url="@../bus2.png" />
                </image>
             </ImageView>
             <Button layoutX="111.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#OnRestart" prefHeight="25.0" prefWidth="82.0" text="Restart" />
             <Button layoutX="111.0" layoutY="174.0" mnemonicParsing="false" onMouseClicked="#OnStepByStep" text="Step by step" />
+            <Label fx:id="labelAllomas" alignment="CENTER" layoutX="245.0" layoutY="15.0" style="-fx-background-color: white;" text="Label" visible="false">
+               <font>
+                  <Font size="18.0" />
+               </font></Label>
+            <Label fx:id="labelSzabadhelyekSzama" layoutX="193.0" layoutY="719.0" style="-fx-background-color: white;" text="Label" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="labelEsemenyek" layoutX="25.0" layoutY="751.0" style="-fx-background-color: white;" text="Label" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="labelBuntetesek" layoutX="25.0" layoutY="719.0" style="-fx-background-color: white;" text="Label" visible="false">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Label fx:id="labelLeszallutasok" layoutX="27.0" layoutY="696.0" style="-fx-background-color: white;" text="Label" visible="false" />
+            <Label fx:id="labelFelszallutasok" layoutX="27.0" layoutY="672.0" style="-fx-background-color: white;" text="Label" visible="false" />
          </children>
       </Pane>
    </children>
