--- a/src/Main/main.fxml
+++ b/src/Main/main.fxml
@@ -35,8 +35,8 @@
                         prefHeight="25.0" prefWidth="82.0" text="Restart"/>
                 <Button layoutX="111.0" layoutY="174.0" mnemonicParsing="false" onMouseClicked="#OnStepByStep"
                         text="Step by step"/>
-                <Label fx:id="labelAllomas" alignment="CENTER" layoutX="245.0" layoutY="15.0"
-                       style="-fx-background-color: rgba(66, 66, 66, 0.1);" text="Label" visible="false">
+                <Label fx:id="labelAllomas" alignment="CENTER" layoutX="379.0" layoutY="37.0"
+                       style="-fx-background-color: rgba(66, 66, 66, 0.1);" text="Label">
                     <font>
                         <Font size="18.0"/>
                     </font>
@@ -63,6 +63,19 @@
                        style="-fx-background-color: rgba(66, 66, 66, 0.1);" text="Label" visible="false"/>
                 <Label fx:id="labelFelszallutasok" layoutX="27.0" layoutY="672.0"
                        style="-fx-background-color: rgba(66, 66, 66, 0.1);" text="Label" visible="false"/>
+                <Button layoutX="126.0" layoutY="358.0" mnemonicParsing="false" onMouseClicked="#optionsSceneButotn"
+                        text="Másik Scene"/>
+                <MenuBar prefHeight="25.0" prefWidth="800.0">
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" onAction="#beallitasMenuClicked" text="Beállítások"/>
+                                <SeparatorMenuItem mnemonicParsing="false"/>
+                                <MenuItem mnemonicParsing="false" onAction="#kilepesMenuClicked" text="Kilépés"/>
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
             </children>
         </Pane>
     </children>
