--- a/src/UI/beallitasok.fxml
+++ b/src/UI/beallitasok.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.172-ea">
+            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="UI.BeallitasokController">
     <Label layoutX="34.0" layoutY="68.0"/>
     <Label layoutX="34.0" layoutY="107.0" text="Utaskor (max)"/>
     <Label layoutX="34.0" layoutY="147.0" text="Utasegyenleg (ig)"/>
