--- a/src/UI/main.fxml
+++ b/src/UI/main.fxml
@@ -1,96 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.MainController">
-    <columnConstraints>
-        <ColumnConstraints />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-    </rowConstraints>
-    <Pane prefHeight="800.0" prefWidth="800.0">
-        <ImageView fitHeight="800.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../map.png" />
-        </ImageView>
-        <ImageView fx:id="imageViewBusz" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" visible="false">
-            <Image url="@../bus2.png" />
-        </ImageView>
-        <Button layoutX="516.0" layoutY="38.0" mnemonicParsing="false" onKeyPressed="#OnStepByStep134KeyPressed" onMouseClicked="#OnStepByStep" text="Egyesével (134)" />
-        <Label fx:id="labelAllomas134" alignment="CENTER" layoutX="470.0" layoutY="643.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelAllomas134">
-            <font>
-                <Font size="18.0" />
-            </font>
+<Pane prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.MainController">
+
+    <ImageView fitHeight="800.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../map.png" />
+    </ImageView>
+    
+    <MenuBar prefHeight="25.0" prefWidth="800.0">
+        <Menu mnemonicParsing="false" text="Menü">
+            <MenuItem mnemonicParsing="false" onAction="#beallitasMenuClicked" text="Beállítások" />
+            <MenuItem mnemonicParsing="false" onAction="#utasUjrageneralasMenuClicked" text="Utasok újragenerálása az adatbázisban" />
+            <MenuItem mnemonicParsing="false" onAction="#restartMenuButtonClicked" text="Újrakezdés" />
+            <SeparatorMenuItem mnemonicParsing="false" />
+            <MenuItem mnemonicParsing="false" onAction="#kilepesMenuClicked" text="Kilépés" />
+        </Menu>
+    </MenuBar>
+    <ImageView fx:id="busz1Img" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" visible="false">
+        <Image url="@../bus2.png" />
+    </ImageView>
+    <ImageView fx:id="busz2Img" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" visible="false">
+        <Image url="@../bus2.png" />
+    </ImageView>
+    <VBox layoutX="15.0" layoutY="600.0" prefHeight="188.0" prefWidth="350.0" styleClass="jarat-info-keret" stylesheets="@jarat-info.css">
+      <HBox alignment="CENTER" prefHeight="145.0" prefWidth="350.0" styleClass="fejlec">
+         <children>
+               <Label fx:id="busz1Jaratszam" prefHeight="21.0" prefWidth="254.0" styleClass="jaratszam" />
+               <Button mnemonicParsing="false" onAction="#busz1StepByStep" prefHeight="0.0" prefWidth="85.0" text="Egyesével" />
+         </children>
+      </HBox>
+        <Label fx:id="busz1Allomas" styleClass="allomas">
+            <VBox.margin>
+                <Insets left="5.0" top="10.0" />
+            </VBox.margin>
         </Label>
-        <Label fx:id="labelSzabadhelyekSzama134" layoutX="527.0" layoutY="750.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelBuntetesekSzam134">
-            <font>
-                <Font size="14.0" />
-            </font>
+        <TextArea fx:id="busz1Info" editable="false" prefHeight="230.0" prefWidth="222.0" styleClass="busz-info" />
+    </VBox>
+    <VBox layoutX="435.0" layoutY="600.0" prefHeight="188.0" prefWidth="350.0" styleClass="jarat-info-keret" stylesheets="@jarat-info.css">
+        <HBox alignment="CENTER" prefHeight="145.0" prefWidth="350.0" styleClass="fejlec">
+            <children>
+                <Label fx:id="busz2Jaratszam" prefHeight="21.0" prefWidth="254.0" styleClass="jaratszam" />
+                <Button mnemonicParsing="false" onAction="#busz2StepByStep" prefHeight="0.0" prefWidth="85.0" text="Egyesével" />
+            </children>
+        </HBox>
+        <Label fx:id="busz2Allomas" styleClass="allomas">
+            <VBox.margin>
+                <Insets left="5.0" top="10.0" />
+            </VBox.margin>
         </Label>
-        <Label fx:id="labelEsemenyek134" layoutX="527.0" layoutY="730.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelEsemenyek134">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label fx:id="labelBuntetesek134" layoutX="527.0" layoutY="710.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelBuntetesek134">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label fx:id="labelLeszallutasok134" layoutX="527.0" layoutY="690.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelLeszallUtas134">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-        <Label fx:id="labelFelszallutasok134" layoutX="525.0" layoutY="670.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelFelszallUtas134">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-        <MenuBar prefHeight="25.0" prefWidth="800.0">
-            <Menu mnemonicParsing="false" text="Menü">
-                <MenuItem mnemonicParsing="false" onAction="#beallitasMenuClicked" text="Beállítások" />
-                <MenuItem mnemonicParsing="false" onAction="#utasUjrageneralasMenuClicked" text="Utasok újragenerálása az adatbázisban" />
-                <MenuItem mnemonicParsing="false" onAction="#restartMenuButtonClicked" text="Újrakezdés" />
-                <SeparatorMenuItem mnemonicParsing="false" />
-                <MenuItem mnemonicParsing="false" onAction="#kilepesMenuClicked" text="Kilépés" />
-            </Menu>
-        </MenuBar>
-      <Label fx:id="labelFelSzallUtas160" layoutX="138.0" layoutY="324.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelFelSzallUtas160">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label fx:id="labelLeSzallUtas160" layoutX="139.0" layoutY="344.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelLeSzallUtas160">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label fx:id="labelBuntetesek160" layoutX="140.0" layoutY="364.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelBuntetesek160">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label fx:id="labelEsemenyek160" layoutX="139.0" layoutY="384.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelEsemenyek160">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label fx:id="labelBuntetesekSzam160" layoutX="140.0" layoutY="404.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="LabelBuntetesekSzam160">
-         <font>
-            <Font size="14.0" />
-         </font></Label>
-      <Label fx:id="labelAllomas160" layoutX="73.0" layoutY="297.0" style="-fx-background-color: rgba(66, 66, 66, 0.3);" text="labelAllomas160">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <Button layoutX="329.0" layoutY="102.0" mnemonicParsing="false" onMouseClicked="#OnStepByStep160KeyPressed" text="Egyesével(160)" />
-    </Pane>
-</GridPane>
+        <TextArea fx:id="busz2Info" editable="false" prefHeight="230.0" prefWidth="222.0" styleClass="busz-info" />
+    </VBox>
+</Pane>
